# zenwood-ocr-app-adws

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.claude/commands/: bug.md  chore.md  conditional_docs.md  feature.md  implement.md  install.md  patch.md  prepare_app.md  (+6 more)
.playwright-mcp/: page-2026-04-20T06-12-37-729Z.yml  page-2026-04-20T06-13-06-291Z.yml  page-2026-04-20T06-24-50-702Z.yml  page-2026-04-20T06-25-08-021Z.yml  page-2026-04-20T07-04-46-116Z.yml  page-2026-04-20T07-04-54-123Z.yml  page-2026-04-20T07-05-32-588Z.yml  page-2026-04-20T07-06-04-214Z.yml  page-2026-04-20T07-06-53-477Z.yml  page-2026-04-20T07-07-05-273Z.yml  page-2026-04-20T07-07-29-588Z.yml  page-2026-04-20T07-08-41-817Z.yml  page-2026-04-20T07-09-04-160Z.yml  page-2026-04-20T07-09-49-009Z.yml  page-2026-04-20T07-10-52-215Z.yml  page-2026-04-20T07-11-06-888Z.yml  page-2026-04-20T07-11-24-186Z.yml  page-2026-04-20T07-15-38-350Z.yml  page-2026-04-20T07-16-12-275Z.yml  page-2026-04-20T07-16-19-570Z.yml  page-2026-04-20T07-16-28-788Z.yml
docs/: api.md  architecture-ocr-llm-reconstruction-cto-review.md  architecture-ocr-llm-reconstruction.md  frontend-integration-plan.md
frontend/: Dockerfile  biome.json  package-lock.json  package.json  playwright.config.ts  proxy.ts  vitest.config.ts  vitest.setup.ts
ocr_agentic_engine/: __init__.py  app.py  auth.py  client.py  engine.py  errors.py  gates.py  helpers.py  ocr_stage.py  ocr_toolkit.py  pipeline.py  router.py  sweep.py  tools.py  types.py
scripts/: README.md  run_e2e_bench.py  start_server.sh
(+125 files in other folders)
